--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
@@ -35,4 +38,8 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.1'
     compile 'com.androidmapsextensions:android-maps-extensions:2.4.0'
     compile 'com.google.android.gms:play-services-maps:10.2.0'
+    // Required -- JUnit 4 framework
+    testImplementation 'junit:junit:4.12'
+    // Optional -- Mockito framework
+    testImplementation 'org.mockito:mockito-core:1.10.19'
 }
